@@ -5,11 +5,17 @@ import javafx.event.ActionEvent;
 import javafx.event.EventHandler;
 import javafx.scene.Node;
 import javafx.scene.Parent;
+import javafx.scene.control.ButtonBase;
+import javafx.scene.control.ContextMenu;
+import javafx.scene.control.MenuItem;
 import javafx.scene.layout.Pane;
 import javafx.util.Duration;
 import pro.gravit.launcher.client.gui.JavaFXApplication;
+import pro.gravit.launcher.client.gui.config.RuntimeSettings;
+import pro.gravit.launcher.client.gui.helper.LookupHelper;
 import pro.gravit.launcher.client.gui.utils.FXMLFactory;
 import pro.gravit.launcher.request.RequestException;
+import pro.gravit.launcher.request.auth.ExitRequest;
 import pro.gravit.utils.helper.LogHelper;
 
 import java.util.concurrent.CompletableFuture;
@@ -26,6 +32,7 @@ public abstract class AbstractVisualComponent {
     private Parent sysFxmlRoot;
     private CompletableFuture<Node> sysFxmlFuture;
     boolean isInit;
+    boolean isPostInit;
     protected boolean isResetOnShow = false;
 
     protected AbstractVisualComponent(String fxmlPath, JavaFXApplication application) {
@@ -33,19 +40,63 @@ public abstract class AbstractVisualComponent {
         this.sysFxmlPath = fxmlPath;
         this.contextHelper = new ContextHelper(this);
         this.fxExecutor = new FXExecutorService(contextHelper);
-        if(application.guiModuleConfig.lazy) {
+        if (application.guiModuleConfig.lazy) {
             this.sysFxmlFuture = application.fxmlFactory.getAsync(sysFxmlPath);
         }
     }
 
-    public static void fade(Node region, double delay, double from, double to, EventHandler<ActionEvent> onFinished) {
+    public static FadeTransition fade(Node region, double delay, double from, double to,
+            EventHandler<ActionEvent> onFinished) {
         FadeTransition fadeTransition = new FadeTransition(Duration.millis(100), region);
-        if (onFinished != null)
-            fadeTransition.setOnFinished(onFinished);
+        if (onFinished != null) fadeTransition.setOnFinished(onFinished);
         fadeTransition.setDelay(Duration.millis(delay));
         fadeTransition.setFromValue(from);
         fadeTransition.setToValue(to);
         fadeTransition.play();
+        return fadeTransition;
+    }
+
+    protected void initBasicControls(Parent header) {
+        if (header == null) {
+            LogHelper.warning("Scene %s header button(#close, #hide) deprecated", getName());
+            LookupHelper.<ButtonBase>lookupIfPossible(layout, "#close")
+                        .ifPresent((b) -> b.setOnAction((e) -> currentStage.close()));
+            LookupHelper.<ButtonBase>lookupIfPossible(layout, "#hide")
+                        .ifPresent((b) -> b.setOnAction((e) -> currentStage.hide()));
+        } else {
+            LookupHelper.<ButtonBase>lookupIfPossible(header, "#controls", "#exit")
+                        .ifPresent((b) -> b.setOnAction((e) -> currentStage.close()));
+            LookupHelper.<ButtonBase>lookupIfPossible(header, "#controls", "#minimize")
+                        .ifPresent((b) -> b.setOnAction((e) -> currentStage.hide()));
+            LookupHelper.<ButtonBase>lookupIfPossible(header, "#controls", "#lang").ifPresent((b) -> {
+
+                b.setContextMenu(makeLangContextMenu());
+                b.setOnMousePressed((e) -> {
+                    if (!e.isPrimaryButtonDown()) return;
+                    b.getContextMenu().show(b, e.getScreenX(), e.getScreenY());
+                });
+            });
+        }
+        currentStage.enableMouseDrag(layout);
+    }
+
+    private ContextMenu makeLangContextMenu() {
+        ContextMenu contextMenu = new ContextMenu();
+        contextMenu.getStyleClass().add("langChoice");
+        for (RuntimeSettings.LAUNCHER_LOCALE locale : RuntimeSettings.LAUNCHER_LOCALE.values()) {
+            MenuItem item = new MenuItem(locale.displayName);
+            item.setOnAction(e -> {
+                try {
+                    application.updateLocaleResources(locale.name);
+                    application.runtimeSettings.locale = locale;
+                    application.gui.reload();
+                } catch (Exception exception) {
+                    errorHandle(exception);
+                }
+            });
+            contextMenu.getItems().add(item);
+        }
+        return contextMenu;
     }
 
     public Pane getLayout() {
@@ -61,7 +112,7 @@ public abstract class AbstractVisualComponent {
     protected synchronized Parent getFxmlRoot() {
         try {
             if (sysFxmlRoot == null) {
-                if(sysFxmlFuture == null) {
+                if (sysFxmlFuture == null) {
                     this.sysFxmlFuture = application.fxmlFactory.getAsync(sysFxmlPath);
                 }
                 sysFxmlRoot = (Parent) sysFxmlFuture.get();
@@ -74,8 +125,8 @@ public abstract class AbstractVisualComponent {
             if (cause instanceof CompletionException) {
                 cause = cause.getCause();
             }
-            if (cause instanceof RuntimeException) {
-                throw (RuntimeException) cause;
+            if (cause instanceof RuntimeException runtimeException) {
+                throw runtimeException;
             }
             throw new FXMLFactory.FXMLLoadException(cause);
         }
@@ -89,7 +140,16 @@ public abstract class AbstractVisualComponent {
         isInit = true;
     }
 
-    protected abstract void doInit() throws Exception;
+    public void postInit() throws Exception {
+        if (!isPostInit) {
+            doPostInit();
+            isPostInit = true;
+        }
+    }
+
+    protected abstract void doInit();
+
+    protected abstract void doPostInit();
 
     public abstract void reset();
 
@@ -109,11 +169,15 @@ public abstract class AbstractVisualComponent {
             message = e.getMessage();
         }
         if (message == null) {
-            message = String.format("%s: %s", e.getClass().getName(), e.getMessage());
+            message = "%s: %s".formatted(e.getClass().getName(), e.getMessage());
         } else {
             message = application.getTranslation("runtime.request.".concat(message), message);
         }
         LogHelper.error(e);
         application.messageManager.createNotification("Error", message);
+    }
+
+    protected Parent getFxmlRootPrivate() {
+        return getFxmlRoot();
     }
 }
