@@ -3,21 +3,18 @@ package pro.gravit.launcher.client.gui.scenes.update;
 import javafx.beans.property.DoubleProperty;
 import javafx.scene.control.Label;
 import javafx.scene.control.ProgressBar;
-import javafx.scene.text.Text;
-import pro.gravit.launcher.AsyncDownloader;
 import pro.gravit.launcher.client.gui.JavaFXApplication;
 import pro.gravit.launcher.client.gui.impl.ContextHelper;
-import pro.gravit.launcher.events.request.UpdateRequestEvent;
+import pro.gravit.launcher.client.gui.utils.AssetIndexHelper;
 import pro.gravit.launcher.hasher.FileNameMatcher;
 import pro.gravit.launcher.hasher.HashedDir;
 import pro.gravit.launcher.hasher.HashedEntry;
 import pro.gravit.launcher.hasher.HashedFile;
+import pro.gravit.launcher.modern.Downloader;
 import pro.gravit.launcher.profiles.optional.OptionalView;
 import pro.gravit.launcher.profiles.optional.actions.OptionalAction;
 import pro.gravit.launcher.profiles.optional.actions.OptionalActionFile;
-import pro.gravit.launcher.request.RequestService;
 import pro.gravit.launcher.request.update.UpdateRequest;
-import pro.gravit.utils.Downloader;
 import pro.gravit.utils.helper.IOHelper;
 import pro.gravit.utils.helper.LogHelper;
 
@@ -35,19 +32,21 @@ public class VisualDownloader {
     private final AtomicLong lastUpdateTime = new AtomicLong(0);
     private final AtomicLong lastDownloaded = new AtomicLong(0);
 
-    private volatile long totalSize;
+    private final AtomicLong totalSize = new AtomicLong();
     private volatile Downloader downloader;
 
     private final ProgressBar progressBar;
-    private final Text speed;
+    private final Label speed;
     private final Label volume;
 
     private final Consumer<Throwable> errorHandle;
     private final Consumer<String> addLog;
+    private final Consumer<UpdateScene.DownloadStatus> updateStatus;
 
     private final ExecutorService executor;
 
-    public VisualDownloader(JavaFXApplication application, ProgressBar progressBar, Text speed, Label volume, Consumer<Throwable> errorHandle, Consumer<String> addLog) {
+    public VisualDownloader(JavaFXApplication application, ProgressBar progressBar, Label speed, Label volume,
+            Consumer<Throwable> errorHandle, Consumer<String> addLog, Consumer<UpdateScene.DownloadStatus> updateStatus) {
         this.application = application;
         this.progressBar = progressBar;
         this.speed = speed;
@@ -59,16 +58,21 @@ public class VisualDownloader {
             thread.setDaemon(true);
             return thread;
         }, null, true);
+        this.updateStatus = updateStatus;
     }
 
-    public void sendUpdateAssetRequest(String dirName, Path dir, FileNameMatcher matcher, boolean digest, String assetIndex, Consumer<HashedDir> onSuccess) {
+    public void sendUpdateAssetRequest(String dirName, Path dir, FileNameMatcher matcher, boolean digest,
+            String assetIndex, Consumer<HashedDir> onSuccess) {
         if (application.offlineService.isOfflineMode()) {
-            addLog.accept(String.format("Hashing %s", dirName));
+            addLog.accept("Hashing %s".formatted(dirName));
+            updateStatus.accept(UpdateScene.DownloadStatus.HASHING);
             application.workers.submit(() -> {
                 try {
                     HashedDir hashedDir = new HashedDir(dir, matcher, false /* TODO */, digest);
+                    updateStatus.accept(UpdateScene.DownloadStatus.COMPLETE);
                     onSuccess.accept(hashedDir);
                 } catch (IOException e) {
+                    updateStatus.accept(UpdateScene.DownloadStatus.ERROR);
                     errorHandle.accept(e);
                 }
             });
@@ -76,31 +80,39 @@ public class VisualDownloader {
         }
         UpdateRequest request = new UpdateRequest(dirName);
         try {
+            updateStatus.accept(UpdateScene.DownloadStatus.REQUEST);
             application.service.request(request).thenAccept(event -> {
                 LogHelper.dev("Start updating %s", dirName);
                 try {
                     downloadAsset(dirName, dir, matcher, digest, assetIndex, onSuccess, event.hdir, event.url);
                 } catch (Exception e) {
+                    updateStatus.accept(UpdateScene.DownloadStatus.ERROR);
                     ContextHelper.runInFxThreadStatic(() -> errorHandle.accept(e));
                 }
             }).exceptionally((error) -> {
+                updateStatus.accept(UpdateScene.DownloadStatus.ERROR);
                 ContextHelper.runInFxThreadStatic(() -> errorHandle.accept(error.getCause()));
                 // hide(2500, scene, onError);
                 return null;
             });
         } catch (IOException e) {
+            updateStatus.accept(UpdateScene.DownloadStatus.ERROR);
             errorHandle.accept(e);
         }
     }
 
-    public void sendUpdateRequest(String dirName, Path dir, FileNameMatcher matcher, boolean digest, OptionalView view, boolean optionalsEnabled, Consumer<HashedDir> onSuccess) {
+    public void sendUpdateRequest(String dirName, Path dir, FileNameMatcher matcher, boolean digest, OptionalView view,
+            boolean optionalsEnabled, Consumer<HashedDir> onSuccess) {
         if (application.offlineService.isOfflineMode()) {
-            addLog.accept(String.format("Hashing %s", dirName));
+            addLog.accept("Hashing %s".formatted(dirName));
+            updateStatus.accept(UpdateScene.DownloadStatus.HASHING);
             application.workers.submit(() -> {
                 try {
                     HashedDir hashedDir = new HashedDir(dir, matcher, false /* TODO */, digest);
+                    updateStatus.accept(UpdateScene.DownloadStatus.COMPLETE);
                     onSuccess.accept(hashedDir);
                 } catch (IOException e) {
+                    updateStatus.accept(UpdateScene.DownloadStatus.ERROR);
                     errorHandle.accept(e);
                 }
             });
@@ -108,67 +120,80 @@ public class VisualDownloader {
         }
         UpdateRequest request = new UpdateRequest(dirName);
         try {
+            updateStatus.accept(UpdateScene.DownloadStatus.REQUEST);
             application.service.request(request).thenAccept(event -> {
                 LogHelper.dev("Start updating %s", dirName);
                 try {
                     download(dirName, dir, matcher, digest, view, optionalsEnabled, onSuccess, event.hdir, event.url);
                 } catch (Exception e) {
+                    updateStatus.accept(UpdateScene.DownloadStatus.ERROR);
                     ContextHelper.runInFxThreadStatic(() -> errorHandle.accept(e));
                 }
             }).exceptionally((error) -> {
+                updateStatus.accept(UpdateScene.DownloadStatus.ERROR);
                 ContextHelper.runInFxThreadStatic(() -> errorHandle.accept(error.getCause()));
                 // hide(2500, scene, onError);
                 return null;
             });
         } catch (IOException e) {
+            updateStatus.accept(UpdateScene.DownloadStatus.ERROR);
             errorHandle.accept(e);
         }
     }
 
-    private void download(String dirName, Path dir, FileNameMatcher matcher, boolean digest, OptionalView view, boolean optionalsEnabled, Consumer<HashedDir> onSuccess, HashedDir targetHDir, String baseUrl) throws Exception {
-        LinkedList<PathRemapperData> pathRemapper = optionalsEnabled ? getPathRemapper(view, targetHDir) : new LinkedList<>();
-        addLog.accept(String.format("Hashing %s", dirName));
-        if (!IOHelper.exists(dir))
-            Files.createDirectories(dir);
+    private void download(String dirName, Path dir, FileNameMatcher matcher, boolean digest, OptionalView view,
+            boolean optionalsEnabled, Consumer<HashedDir> onSuccess, HashedDir targetHDir,
+            String baseUrl) throws Exception {
+        LinkedList<PathRemapperData> pathRemapper = optionalsEnabled
+                ? getPathRemapper(view, targetHDir)
+                : new LinkedList<>();
+        addLog.accept("Hashing %s".formatted(dirName));
+        updateStatus.accept(UpdateScene.DownloadStatus.HASHING);
+        if (!IOHelper.exists(dir)) Files.createDirectories(dir);
 
         HashedDir hashedDir = new HashedDir(dir, matcher, false /* TODO */, digest);
         HashedDir.Diff diff = targetHDir.diff(hashedDir, matcher);
-        final List<AsyncDownloader.SizedFile> adds = getFilesList(dir, pathRemapper, diff.mismatch);
+        final List<Downloader.SizedFile> adds = getFilesList(dir, pathRemapper, diff.mismatch);
 
         LogHelper.info("Diff %d %d", diff.mismatch.size(), diff.extra.size());
-        addLog.accept(String.format("Downloading %s...", dirName));
+        addLog.accept("Downloading %s...".formatted(dirName));
         downloadFiles(dir, adds, baseUrl, () -> {
             try {
-                addLog.accept(String.format("Delete Extra files %s", dirName));
+                addLog.accept("Delete Extra files %s".formatted(dirName));
+                updateStatus.accept(UpdateScene.DownloadStatus.DELETE);
                 deleteExtraDir(dir, diff.extra, diff.extra.flag);
                 onSuccess.accept(targetHDir);
             } catch (IOException e) {
+                updateStatus.accept(UpdateScene.DownloadStatus.ERROR);
                 errorHandle.accept(e);
             }
         });
     }
 
-    private void downloadAsset(String dirName, Path dir, FileNameMatcher matcher, boolean digest, String assetIndex, Consumer<HashedDir> onSuccess, HashedDir targetHDir, String baseUrl) throws Exception {
+    private void downloadAsset(String dirName, Path dir, FileNameMatcher matcher, boolean digest, String assetIndex,
+            Consumer<HashedDir> onSuccess, HashedDir targetHDir, String baseUrl) throws Exception {
         LinkedList<PathRemapperData> pathRemapper = new LinkedList<>();
-        addLog.accept(String.format("Check assetIndex %s", assetIndex));
-        if (!IOHelper.exists(dir))
-            Files.createDirectories(dir);
+        addLog.accept("Check assetIndex %s".formatted(assetIndex));
+        if (!IOHelper.exists(dir)) Files.createDirectories(dir);
         Consumer<HashedDir> downloadAssetRunnable = (assetHDir) -> {
             try {
                 HashedDir hashedDir = new HashedDir(dir, matcher, false, digest);
                 HashedDir.Diff diff = assetHDir.diff(hashedDir, matcher);
-                final List<AsyncDownloader.SizedFile> adds = getFilesList(dir, pathRemapper, diff.mismatch);
+                final List<Downloader.SizedFile> adds = getFilesList(dir, pathRemapper, diff.mismatch);
 
                 LogHelper.info("Diff %d %d", diff.mismatch.size(), diff.extra.size());
-                addLog.accept(String.format("Downloading %s...", dirName));
+                addLog.accept("Downloading %s...".formatted(dirName));
                 downloadFiles(dir, adds, baseUrl, () -> {
                     try {
+                        updateStatus.accept(UpdateScene.DownloadStatus.COMPLETE);
                         onSuccess.accept(assetHDir);
                     } catch (Exception e) {
+                        updateStatus.accept(UpdateScene.DownloadStatus.ERROR);
                         errorHandle.accept(e);
                     }
                 });
             } catch (Throwable e) {
+                updateStatus.accept(UpdateScene.DownloadStatus.ERROR);
                 errorHandle.accept(e);
             }
         };
@@ -177,27 +202,29 @@ public class VisualDownloader {
             Path localAssetIndexPath = dir.resolve(assetIndexPath);
             boolean needUpdateIndex;
             HashedDir.FindRecursiveResult result = targetHDir.findRecursive(assetIndexPath);
-            if(!(result.entry instanceof HashedFile)) {
-                addLog.accept(String.format("ERROR: assetIndex %s not found", assetIndex));
+            if (!(result.entry instanceof HashedFile)) {
+                addLog.accept("ERROR: assetIndex %s not found".formatted(assetIndex));
+                updateStatus.accept(UpdateScene.DownloadStatus.ERROR);
                 errorHandle.accept(new RuntimeException("assetIndex not found"));
                 return;
-            };
-            if(Files.exists(localAssetIndexPath)) {
+            }
+            if (Files.exists(localAssetIndexPath)) {
                 HashedFile file = new HashedFile(localAssetIndexPath, Files.size(localAssetIndexPath), true);
-                needUpdateIndex = !((HashedFile)result.entry).isSame(file);
+                needUpdateIndex = !((HashedFile) result.entry).isSame(file);
             } else {
                 IOHelper.createParentDirs(localAssetIndexPath);
                 needUpdateIndex = true;
             }
-            if(needUpdateIndex) {
-                List<AsyncDownloader.SizedFile> adds = new ArrayList<>(1);
-                adds.add(new AsyncDownloader.SizedFile(assetIndexPath, ((HashedFile) result.entry).size));
+            if (needUpdateIndex) {
+                List<Downloader.SizedFile> adds = new ArrayList<>(1);
+                adds.add(new Downloader.SizedFile(assetIndexPath, ((HashedFile) result.entry).size));
                 downloadFiles(dir, adds, baseUrl, () -> {
                     try {
                         AssetIndexHelper.AssetIndex index = AssetIndexHelper.parse(localAssetIndexPath);
                         AssetIndexHelper.modifyHashedDir(index, targetHDir);
                         downloadAssetRunnable.accept(targetHDir);
                     } catch (Exception e) {
+                        updateStatus.accept(UpdateScene.DownloadStatus.ERROR);
                         errorHandle.accept(e);
                     }
                 });
@@ -207,34 +234,41 @@ public class VisualDownloader {
                     AssetIndexHelper.modifyHashedDir(index, targetHDir);
                     downloadAssetRunnable.accept(targetHDir);
                 } catch (Exception e) {
+                    updateStatus.accept(UpdateScene.DownloadStatus.ERROR);
                     errorHandle.accept(e);
                 }
             }
         }
     }
 
-    private void downloadFiles(Path dir, List<AsyncDownloader.SizedFile> adds, String baseUrl, Runnable onSuccess) throws Exception {
+    private void downloadFiles(Path dir, List<Downloader.SizedFile> adds, String baseUrl,
+            Runnable onSuccess) {
         ContextHelper.runInFxThreadStatic(this::resetProgress).thenAccept((x) -> {
-            downloader = Downloader.downloadList(adds, baseUrl, dir, new Downloader.DownloadCallback() {
-                @Override
-                public void apply(long fullDiff) {
-                    {
-                        long old = totalDownloaded.getAndAdd(fullDiff);
-                        updateProgress(old, old + fullDiff);
+            try {
+                downloader = Downloader.downloadList(adds, baseUrl, dir, new Downloader.DownloadCallback() {
+                    @Override
+                    public void apply(long fullDiff) {
+                        {
+                            long old = totalDownloaded.getAndAdd(fullDiff);
+                            updateProgress(old, old + fullDiff);
+                        }
                     }
-                }
 
-                @Override
-                public void onComplete(Path path) {
+                    @Override
+                    public void onComplete(Path path) {
 
-                }
-            }, executor, application.guiModuleConfig.downloadThreads);
-            downloader.getFuture()
-                    .thenAccept((e) -> onSuccess.run())
-                    .exceptionally((e) -> {
-                        ContextHelper.runInFxThreadStatic(() -> errorHandle.accept(e));
-                        return null;
-                    });
+                    }
+                }, executor, application.guiModuleConfig.downloadThreads);
+                updateStatus.accept(UpdateScene.DownloadStatus.DOWNLOAD);
+                downloader.getFuture().thenAccept((e) -> onSuccess.run()).exceptionally((e) -> {
+                    updateStatus.accept(UpdateScene.DownloadStatus.ERROR);
+                    ContextHelper.runInFxThreadStatic(() -> errorHandle.accept(e));
+                    return null;
+                });
+            } catch (Throwable e) {
+                updateStatus.accept(UpdateScene.DownloadStatus.ERROR);
+                ContextHelper.runInFxThreadStatic(() -> errorHandle.accept(e));
+            }
         });
     }
 
@@ -245,28 +279,28 @@ public class VisualDownloader {
         progressBar.progressProperty().setValue(0);
     }
 
-    private List<AsyncDownloader.SizedFile> getFilesList(Path dir, LinkedList<PathRemapperData> pathRemapper, HashedDir mismatch) throws IOException {
-        totalSize = 0;
+    private List<Downloader.SizedFile> getFilesList(Path dir, LinkedList<PathRemapperData> pathRemapper,
+            HashedDir mismatch) throws IOException {
+        totalSize.set(0);
 
-        final List<AsyncDownloader.SizedFile> adds = new ArrayList<>();
+        final List<Downloader.SizedFile> adds = new ArrayList<>();
         mismatch.walk(IOHelper.CROSS_SEPARATOR, (path, name, entry) -> {
             String urlPath = path;
             switch (entry.getType()) {
-                case FILE:
+                case FILE -> {
                     HashedFile file = (HashedFile) entry;
-                    totalSize += file.size;
+                    totalSize.addAndGet(file.size);
                     for (PathRemapperData remapEntry : pathRemapper) {
                         if (path.startsWith(remapEntry.key)) {
                             urlPath = path.replace(remapEntry.key, remapEntry.value);
-                            LogHelper.dev("Remap found: injected url path: %s | calculated original url path: %s", path, urlPath);
+                            LogHelper.dev("Remap found: injected url path: %s | calculated original url path: %s", path,
+                                          urlPath);
                         }
                     }
                     Files.deleteIfExists(dir.resolve(path));
-                    adds.add(new AsyncDownloader.SizedFile(urlPath, path, file.size));
-                    break;
-                case DIR:
-                    Files.createDirectories(dir.resolve(path));
-                    break;
+                    adds.add(new Downloader.SizedFile(urlPath, path, file.size));
+                }
+                case DIR -> Files.createDirectories(dir.resolve(path));
             }
             return HashedDir.WalkAction.CONTINUE;
         });
@@ -275,8 +309,8 @@ public class VisualDownloader {
 
     private LinkedList<PathRemapperData> getPathRemapper(OptionalView view, HashedDir hdir) {
         for (OptionalAction action : view.getDisabledActions()) {
-            if (action instanceof OptionalActionFile) {
-                ((OptionalActionFile) action).disableInHashedDir(hdir);
+            if (action instanceof OptionalActionFile optionalActionFile) {
+                optionalActionFile.disableInHashedDir(hdir);
             }
         }
         LinkedList<PathRemapperData> pathRemapper = new LinkedList<>();
@@ -302,14 +336,9 @@ public class VisualDownloader {
             HashedEntry entry = mapEntry.getValue();
             HashedEntry.Type entryType = entry.getType();
             switch (entryType) {
-                case FILE:
-                    Files.delete(path);
-                    break;
-                case DIR:
-                    deleteExtraDir(path, (HashedDir) entry, deleteDir || entry.flag);
-                    break;
-                default:
-                    throw new AssertionError("Unsupported hashed entry type: " + entryType.name());
+                case FILE -> Files.delete(path);
+                case DIR -> deleteExtraDir(path, (HashedDir) entry, deleteDir || entry.flag);
+                default -> throw new AssertionError("Unsupported hashed entry type: " + entryType.name());
             }
         }
 
@@ -331,17 +360,17 @@ public class VisualDownloader {
 
 
     private void updateProgress(long oldValue, long newValue) {
-        double add = (double) (newValue - oldValue) / (double) totalSize; // 0.0 - 1.0
+        double add = (double) (newValue - oldValue) / (double) totalSize.get(); // 0.0 - 1.0
         DoubleProperty property = progressBar.progressProperty();
         property.set(property.get() + add);
         long lastTime = lastUpdateTime.get();
         long currentTime = System.currentTimeMillis();
         if (currentTime - lastTime >= 130) {
-            String format = String.format(" [%.1f MB]", (double) newValue / (1024.0 * 1024.0), (double) totalSize / (1024.0 * 1024.0));
             double bytesSpeed = (double) (newValue - lastDownloaded.get()) / (double) (currentTime - lastTime) * 1000.0;
-            String speedFormat = String.format("%.2f ", bytesSpeed * 8 / (1000.0 * 1000.0));
+            String speedFormat = "%.1f".formatted(bytesSpeed * 8 / (1000.0 * 1000.0));
             ContextHelper.runInFxThreadStatic(() -> {
-                volume.setText(format);
+                volume.setText("%.1f/%.1f MB".formatted((double) newValue / (1024.0 * 1024.0),
+                                                           (double) totalSize.get() / (1024.0 * 1024.0)));
                 speed.setText(speedFormat);
             });
             lastUpdateTime.set(currentTime);
